--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@nestjs/passport": "11.0.5",
     "@nestjs/platform-express": "11.0.17",
     "@nestjs/platform-socket.io": "11.0.17",
+    "@nestjs/schedule": "^6.0.1",
     "@nestjs/swagger": "11.1.3",
     "@nestjs/throttler": "6.4.0",
     "@nestjs/websockets": "11.0.17",
@@ -80,7 +81,7 @@
     "@types/express": "5.0.1",
     "@types/jest": "29.5.14",
     "@types/multer": "1.4.12",
-    "@types/node": "22.14.1",
+    "@types/node": "^24.10.0",
     "@types/nodemailer": "6.4.17",
     "@types/passport-google-oauth20": "^2.0.16",
     "@types/passport-local": "1.0.38",
